--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: flutter_web_seo
 description: A flutter web package - for SEO purposes.
 version: 0.0.2
-homepage: https://github.com/dip-dev-team/flutter_web_seo
+homepage: https://dip.dev
 repository: https://github.com/dip-dev-team/flutter_web_seo
 issue_tracker: https://github.com/dip-dev-team/flutter_web_seo/issues
 
